package main.controllers;

public interface PutController extends PlacementController {

}

